knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/accHierarchy__Account_Hierarchy_Setup__c/accHierarchy__Account_Hierarchy_Setup__c.object-meta.xml
<CustomObject>
    <label>Account Hierarchy Setup</label>
    <nameField>
        <displayFormat>AHN -{0000}</displayFormat>
        <label>Account Hierarchy Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounts Hierarchy Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>