knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/accHierarchy__Account_Hierarchy_Setup__c/fields/accHierarchy__Opportunities_Fields__c.field-meta.xml
<CustomField>
    <fullName>accHierarchy__Opportunities_Fields__c</fullName>
    <label>Opportunities Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>