knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/accHierarchy__Account_Hierarchy_Setup__c/fields/accHierarchy__Related_List_Fields__c.field-meta.xml
<CustomField>
    <fullName>accHierarchy__Related_List_Fields__c</fullName>
    <label>Related List Fields</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>